--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
     "license": "MIT",
     "type": "project",
     "description": "The \"Symfony Standard Edition\" distribution",
+    "repositories": [
+        {"type": "vcs", "url": "git@github.com:mventures/manulife-api.git"},
+        {"type": "vcs", "url": "git@github.com:mventures/travel.git"}
+    ],
     "autoload": {
         "psr-0": { "": "src/" }
     },
@@ -18,7 +22,9 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "flighthub/manulife": "dev-master",
+        "flighthub/travel": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
